pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-entrypoints.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-tls-with-entrypoints
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure

spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
  tls:
    - hosts:
        - whoami.localhost
      secretName: whoami-tls
